2016-01-11  Araki Ken  <arakiken@users.sf.net>

	* etc/main, etc/main.ja: Updated.

	* fb/x_window.c: Compiling error is fixed.

	* jni/Android.mk: OTF_SRC_FILES and OTF_CFLAGS are cleared once on every arch.

	* x_font_ft.c: XftGlyphExtents() is used if ch is glyph index.

	* main/Makefile.in: Mistake of the previous commit is reverted.

2016-01-10  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.ja, man/mlterm.1: Updated.

	* x_main_config.c: "use_gsub", "gsub_script" and "gsub_features" options
	  are added.

	* x_screen.c: gsub_get_gsub_font() is added.

	* x_type_loader.[ch]:
	  - Moved to xwindow/xlib/.
	  - X_SET_OTF and X_CONVRET_TEXT_TO_GLYPHS are added to x_type_id_t.

	* xlib/x_font.c, libtype/x_font_ft.c:
	  - x_font_has_gsub_table(), x_convert_text_to_glyphs(),
	    {xft|cairo}_set_otf and {xft|cairo}_convert_text_to_glyphs() are added.

	* fb/x_font.c:
	  - load_char() -> load_glyph()
	  - get_glyph_index(), x_font_has_gsub_table() and x_convert_text_to_glyphs()
	    are added.
	  - get_ft_bitmap() accepts glyph index if use_gsub argument is true.

	* x_font_manager.[ch]:
	  - use_gsub is added to x_font_manager_t.
	  - x_font_manager_set_size_attr() is renamed to x_font_manager_set_attr().

	* x_font.h: otf, otf_not_found and use_gsub are added to x_font_t.

	* ml_vt100_parser.c:
	  - CSI33h / CSI33l are supported.
	  - "use_gsub" is added to OSC 5379.

	* ml_term_manager.c: ml_set_gsub_attr(NULL) is called in
	  ml_term_manager_final() to free memory.

	* ml_logical_visual.[ch]: ml_term_t is added to ml_logvis_ctl_new()
	  in order to pass it to ml_line_ctl_render().

	* ml_line_shape.c:
	  - ml_line_gsub_need_shape() is added.
	  - ml_line_shape() uses ml_shape_gsub().

	* ml_shape.[ch]: ml_shape_gsub() is added.

	* ml_line.[ch]:
	  - ml_gsub_state_t is added to ml_line_t.
	  - ml_set_use_gsub(), ml_line_set_use_gsub(), ml_line_gsub_render(),
	    ml_gsub_visual(), ml_line_gsub_logical(), ml_line_has_gsub() and