@@ -1,3 +1,8 @@
+2016-01-13  Araki Ken  <arakiken@users.sf.net>
+
+	* quartz/otfwrap.[ch], quartz/x_font.c:
+	  otf_check_table() is integrated to otf_open().
+
 2016-01-11  Araki Ken  <arakiken@users.sf.net>
 
 	* etc/main, etc/main.ja: Updated.
